--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   background-color: #fefc01;
   justify-content: center;
   height: 100vh;
+  width: 100%;
 }
 .app__logo {
   object-fit: contain;
@@ -12,5 +13,16 @@
 }
 .app__bodyBackground {
   background-color: white;
-  height: 400px;
+  border-radius: 10px;
+  overflow: auto;
+}
+
+@media (max-width: 620px) {
+  .app__logo {
+    display: none;
+  }
+  .app__bodyBackground {
+    width: 100%;
+    border-radius: 0px;
+  }
 }
