--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,11 @@
     border-radius: 0px;
   }
 }
+*::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
